--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "scipy>=1.13.1",
     "tqdm>=4.66.4",
     "questionary>=2.0.1",
+    "functools>=0.5",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
